Fix too wide letter status notes

--- a/CmsWeb/Content/css/Fixups2.css
+++ b/CmsWeb/Content/css/Fixups2.css
@@ -437,6 +437,11 @@ span.currentTag {
 #sidebar .sidebar_title.inactive a {
     color: #bbb;
 }
+@media (min-width: 1200px) {
+    .maxWidthMedium {
+        max-width: 35em;
+    }
+}
 
 @media (max-width: 1200px) {
     .display div.controls {
@@ -452,11 +457,19 @@ span.currentTag {
     #navGlobal .outsideCurrentTag {
         display: inline;
     }
+
+    .maxWidthMedium {
+        max-width: 25em;
+    }
 }
 
 @media (max-width: 979px) {
     #navGlobal .outsideCurrentTag {
         display: inline;
+    }
+
+    .maxWidthMedium {
+        max-width: 25em;
     }
 }
 
